fixes weird text wrapping issue on feature page icons.

--- a/app/assets/stylesheets/detail_pages.css.scss
+++ b/app/assets/stylesheets/detail_pages.css.scss
@@ -33,6 +33,9 @@ body {
 .icon {
   margin: 0 30px 0 0;
   font-size: 32px;
+  line-height: 32px;
+  height: 32px;
+  float: left;
 }
 
 ul.feature-detail li {
